<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent/-->
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <name>CampusCoffee</name>
    <groupId>de.unibayreuth.se</groupId>
    <artifactId>parent</artifactId>
    <version>0.0.1</version>
    <url>https://github.com/se-ubt/se25-campus-coffee</url>

    <packaging>pom</packaging>

    <modules>
        <module>domain</module>
        <module>data</module>
        <module>api</module>
        <module>application</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <!-- Project -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Maven -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- Maven Plugins -->
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <maven.plugin.compiler.version>3.14.0</maven.plugin.compiler.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
        <!-- TODO: Update once this Cucumber-related bug is fixed (https://issues.apache.org/jira/browse/SUREFIRE-2299) -->
        <maven.plugin.surefire.version>3.5.2</maven.plugin.surefire.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
        <maven.plugin.jar.version>3.4.2</maven.plugin.jar.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jxr-plugin -->
        <maven.plugin.jxr.version>3.6.0</maven.plugin.jxr.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-site-plugin -->
        <maven.plugin.site.version>	3.21.0</maven.plugin.site.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-project-info-reports-plugin -->
        <maven.plugin-project-info-reports.version>3.9.0</maven.plugin-project-info-reports.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-pmd-plugin -->
        <maven.plugin.pmd.version>3.26.0</maven.plugin.pmd.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
        <maven.plugin.resources.version>3.3.1</maven.plugin.resources.version>
        <!-- https://mvnrepository.com/artifact/io.swagger.codegen.v3/swagger-codegen-maven-plugin -->
        <maven.plugin.swagger.codegen.v3.version>3.0.68</maven.plugin.swagger.codegen.v3.version>

        <!-- Spring Boot -->
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent/-->
        <spring.boot.version>3.4.5</spring.boot.version>
        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
        <springdoc.openapi.version>2.8.6</springdoc.openapi.version>

        <!-- Testing -->
        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
        <hamcrest.version>3.0</hamcrest.version>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <mockito.version>5.17.0</mockito.version>
        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
        <rest-assured.version>5.5.1</rest-assured.version>
        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <assertj.version>3.27.3</assertj.version>
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <cucumber.version>7.22.1</cucumber.version>
        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite -->
        <junit.platform.suite.version>1.13.0-M3</junit.platform.suite.version>

        <!-- Other tools -->
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <lombok.version>1.18.38</lombok.version>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-mapstruct-binding -->
        <lombok.mapstruct.version>0.2.0</lombok.mapstruct.version>
        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
        <mapstruct.version>1.6.3</mapstruct.version>
        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
        <flyway.version>11.8.1</flyway.version>
        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
        <hibernate.validator.version>8.0.2.Final</hibernate.validator.version>
        <!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-annotations -->
        <spotbugs.annotations.version>4.9.3</spotbugs.annotations.version>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-central</id>
            <name>maven-central</name>
            <url>https://repo1.maven.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate.validator.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>${spotbugs.annotations.version}</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-spring</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <version>${junit.platform.suite.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.compiler.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring.boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <doclint>all,-missing</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.plugin.surefire.version}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <argLine>
                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
                        -Xshare:off
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven.plugin.jxr.version}</version>
                <executions>
                    <execution>
                        <id>generate-cross-references</id>
                        <phase>site</phase>
                        <goals>
                            <goal>jxr</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven.plugin.pmd.version}</version>
                <configuration>
                    <failOnViolation>false</failOnViolation>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-pmd-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                            <goal>cpd-check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skipIfEmpty>true</skipIfEmpty>
                    <excludes>
                        <exclude>**/de.unibayreuth.se.taskboard.CampusCoffeeSystemTests-*.yaml</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven.plugin.jxr.version}</version>
            </plugin>
        </plugins>
    </reporting>

</project>
